<resources>
    <string name="app_name">Currency converter</string>
    <string name="base_currency_info">"Base currency: %s"</string>

    <string name="err_loading_from_db">Can\'t load rates from the local database</string>
    <string name="err_loading_from_remote_api">Can\'t load rates from remote API</string>
    <string name="country_flag_of_the_currency">Country flag of the currency</string>
    <string name="base_currency_label">Base currency</string>
    <string name="amount_label">Amount</string>
    <string name="updated_label">Updated:</string>
    <string name="baseChooserButtonRatio" translatable="false">1:0.6</string>
    <string name="convert">Convert</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_1000" translatable="false">1000</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_100" translatable="false">100</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_10" translatable="false">10</string>
    <string name="_0" translatable="false">0</string>
    <string name="comma" translatable="false">,</string>
    <string name="_3" translatable="false">3</string>
    <string name="erase" translatable="false">C</string>
    <string name="base_currency_settings">Base currency settings</string>
    <string name="error_loading_data_from_remote_api">Error loading data from remote API</string>
    <string name="no_data_received">No data received</string>
    <string name="menu_edit_currency_list">Edit currency list</string>
    <string name="menu_update_rates">Update rates</string>
    <string name="rates_loading_error_message">Can\'t load currency rates from server</string>

    <string name="facebook_app_id" translatable="false">355965245517529</string>
    <string name="title_activity_edit_currencies_list">EditCurrenciesListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
