<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/base_currency_settings"
            app:titleTextColor="@android:color/white">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="132dp"
            android:layout_height="76dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/currency_flag"
                android:layout_width="132dp"
                android:layout_height="76dp"
                android:contentDescription="@string/country_flag_of_the_currency"
                android:scaleType="fitCenter" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currency_name">

            <TextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@{viewModel.currencyAmountDateSource}"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorBlack"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:text="888.0088" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/currency_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="@{viewModel.currencyDataSource.displayName}"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:text="Name of currency" />

        <TextView
            android:id="@+id/currency_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@{viewModel.currencyDataSource.symbol}"
            android:textColor="@color/colorLightGray"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            tools:text="RUB" />

        <TextView
            android:id="@+id/currency_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@{viewModel.currencyDataSource.currencyCode}"
            android:textColor="@color/colorLightGray"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            tools:text="RUB" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <Button
                    android:id="@+id/b_07"
                    style="@style/baseChooserButton"
                    android:text="@string/_7"
                    app:layout_constraintBottom_toTopOf="@+id/b_04"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_08"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_08"
                    style="@style/baseChooserButton"
                    android:text="@string/_8"
                    app:layout_constraintBottom_toTopOf="@+id/b_05"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_09"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_07"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_09"
                    style="@style/baseChooserButton"
                    android:text="@string/_9"
                    app:layout_constraintBottom_toTopOf="@+id/b_06"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_ok_1000"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_08"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_ok_1000"
                    style="@style/baseChooserButton.ok"
                    android:text="@string/_1000"
                    app:layout_constraintBottom_toTopOf="@+id/b_ok_100"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_09"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_04"
                    style="@style/baseChooserButton"
                    android:text="@string/_4"
                    app:layout_constraintBottom_toTopOf="@+id/b_01"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_05"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/b_07" />

                <Button
                    android:id="@+id/b_05"
                    style="@style/baseChooserButton"
                    android:text="@string/_5"
                    app:layout_constraintBottom_toTopOf="@+id/b_02"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_06"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_04"
                    app:layout_constraintTop_toBottomOf="@+id/b_08" />

                <Button
                    android:id="@+id/b_06"
                    style="@style/baseChooserButton"
                    android:text="@string/_6"
                    app:layout_constraintBottom_toTopOf="@+id/b_03"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_ok_100"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_05"
                    app:layout_constraintTop_toBottomOf="@+id/b_09" />

                <Button
                    android:id="@+id/b_ok_100"
                    style="@style/baseChooserButton.ok"
                    android:text="@string/_100"
                    app:layout_constraintBottom_toTopOf="@+id/b_ok_10"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_06"
                    app:layout_constraintTop_toBottomOf="@+id/b_ok_1000" />

                <Button
                    android:id="@+id/b_01"
                    style="@style/baseChooserButton"
                    android:text="@string/_1"
                    app:layout_constraintBottom_toTopOf="@+id/b_0"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_02"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/b_04" />

                <Button
                    android:id="@+id/b_02"
                    style="@style/baseChooserButton"
                    android:text="@string/_2"
                    app:layout_constraintBottom_toTopOf="@+id/b_comma"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_03"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_01"
                    app:layout_constraintTop_toBottomOf="@+id/b_05" />

                <Button
                    android:id="@+id/b_03"
                    style="@style/baseChooserButton"
                    android:text="@string/_3"
                    app:layout_constraintBottom_toTopOf="@+id/b_erase"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_ok_10"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_02"
                    app:layout_constraintTop_toBottomOf="@+id/b_06" />

                <Button
                    android:id="@+id/b_ok_10"
                    style="@style/baseChooserButton.ok"
                    android:text="@string/_10"
                    app:layout_constraintBottom_toTopOf="@+id/b_ok_1"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_03"
                    app:layout_constraintTop_toBottomOf="@+id/b_ok_100" />

                <Button
                    android:id="@+id/b_0"
                    style="@style/baseChooserButton"
                    android:text="@string/_0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_comma"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/b_01" />

                <Button
                    android:id="@+id/b_comma"
                    style="@style/baseChooserButton"
                    android:text="@string/comma"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_erase"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_0"
                    app:layout_constraintTop_toBottomOf="@+id/b_02" />

                <Button
                    android:id="@+id/b_erase"
                    style="@style/baseChooserButton"
                    android:text="@string/erase"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toStartOf="@+id/b_ok_1"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_comma"
                    app:layout_constraintTop_toBottomOf="@+id/b_03" />

                <Button
                    android:id="@+id/b_ok_1"
                    style="@style/baseChooserButton.ok"
                    android:text="@string/_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="@string/baseChooserButtonRatio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/b_erase"
                    app:layout_constraintTop_toBottomOf="@+id/b_ok_10" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/b_convert"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/convert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>